--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,7 +11,8 @@
     tools:context="com.example.revern.fcmnotifications.MainActivity">
 
     <TextView
+        android:id="@+id/token"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Hello World!" />
+        android:text="@string/tap_me_for_know_token" />
 </RelativeLayout>
